syntax = "proto3";

option go_package = "github.com/kuadrant/kuadrant-operator/pkg/extension/grpc/v0";

package kuadrant.v0;

import "google/protobuf/timestamp.proto";
import "gateway_api.proto";

// The greeting service definition.
service ExtensionService {
  // Sends a greeting
  rpc Ping (PingRequest) returns (PongResponse) {}
  // Subscribe to a set of pongs
  rpc Subscribe(PingRequest) returns (stream PongResponse) {}
  rpc Resolve(ResolveRequest) returns (ResolveResponse) {}
}

// The request message containing the time the request was dispatched.
message PingRequest {
  google.protobuf.Timestamp out = 1;
}

// The response message containing the time the request was received.
message PongResponse {
  google.protobuf.Timestamp in = 1;
}

// evaluate the expression and whether or not to subscribe
message ResolveRequest {
  kuadrant.v0.Policy policy = 1;
  string expression = 2;
  bool subscribe = 3;
}

// todo(adam-cattermole): this should return a Cel value not a string
message ResolveResponse {
  string cel_result = 1;
}
